--- a/primes_by_odds.ipynb
+++ b/primes_by_odds.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from numpy import sqrt\n",
     "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,11 +31,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max = 1000000\n",
+    "odds=[]\n",
+    "primes = []\n",
+    "ops=0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def first_primes(max=100000):\n",
+    "    global ops\n",
     "    # primes are always odd numbers : 3, 5, 7 ......\n",
     "    # but not all odd numbers are primes ! ex: 9, 15\n",
     "    # So we divide each odd number by the primes already known and each time we found one, we add it to the list of primes. \n",
@@ -42,6 +56,7 @@
     "        prime=True\n",
     "        #odds.append(n)\n",
     "        for k in primes:\n",
+    "            if k>sqrt(n):break\n",
     "            ops+=1\n",
     "            xprint(n,k,n%k==0,end=\"\")\n",
     "            if (n%k) == 0:\n",
@@ -62,63 +77,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# compute the primes under 1 million\n",
-    "max = 1000000\n",
-    "odds=[]\n",
-    "primes = []\n",
-    "ops=0\n",
-    "# primes = first_primes(max)\n",
     "\n",
-    "# it takes 30m 52.3s "
+    "primes = first_primes(max)\n",
+    "\n",
+    "# it takes 30m 52.3s without sqrt(n)\n",
+    "# it takes 1m 45.4s with sqrt(n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save once\n",
+    "# with open('primes.pkl', 'wb') as f:\n",
+    "#     pickle.dump(primes, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1099997, 3752407333)"
+       "(78498, 999983)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "primes[-1], ops"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(85714, 1099997)"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "primes[-1], ops\n",
     "len(primes),primes[-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "998551\t998561\t998617\t998623\t998629\t998633\t998651\t\n",
+      "998653\t998681\t998687\t998689\t998717\t998737\t998743\t998749\t998759\t998779\t998813\t998819\t998831\t998839\t998843\t\n",
+      "998857\t998861\t998897\t998909\t998917\t998927\t998941\t998947\t998951\t998957\t998969\t998983\t998989\t999007\t999023\t\n",
+      "999029\t999043\t999049\t999067\t999083\t999091\t999101\t999133\t999149\t999169\t999181\t999199\t999217\t999221\t999233\t\n",
+      "999239\t999269\t999287\t999307\t999329\t999331\t999359\t999371\t999377\t999389\t999431\t999433\t999437\t999451\t999491\t\n",
+      "999499\t999521\t999529\t999541\t999553\t999563\t999599\t999611\t999613\t999623\t999631\t999653\t999667\t999671\t999683\t\n",
+      "999721\t999727\t999749\t999763\t999769\t999773\t999809\t999853\t999863\t999883\t999907\t999917\t999931\t999953\t999959\t\n",
+      "999961\t999979\t999983\t"
+     ]
+    }
+   ],
+   "source": [
+    "last = 100  # the last ones\n",
+    "start = len(primes)-last+1\n",
+    "end = start + last\n",
+    "for k in range(start,end):\n",
+    "    print(primes[k-1],end=\"\\t\")\n",
+    "    if k%15==0: print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compute the next primes after 1 million"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reset primes to the first 1 million search\n",
+    "# read from file\n",
+    "with open('primes.pkl', 'rb') as f:\n",
+    "    mynewprimeslist = pickle.load(f)\n",
+    "# reset primes with data read\n",
+    "primes = mynewprimeslist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def next_series():\n",
+    "    global ops\n",
+    "    next_primes = []\n",
+    "    for n in range(min,max,2):\n",
+    "        prime=True\n",
+    "        #odds.append(n)\n",
+    "        for k in primes:\n",
+    "            if k>sqrt(n):break\n",
+    "            ops+=1\n",
+    "            xprint(n,k,n%k==0,end=\"\")\n",
+    "            if (n%k) == 0:\n",
+    "                prime = False\n",
+    "                xprint()\n",
+    "                xprint(n,\" is not prime!\")\n",
+    "                xprint()\n",
+    "                break\n",
+    "            else:\n",
+    "                xprint()\n",
+    "        # after divisions with all primes or n not prime   \n",
+    "        if prime and n not in primes:\n",
+    "            xprint(n,\" is prime !\")\n",
+    "            primes.append(n)\n",
+    "            next_primes.append(n)\n",
+    "            xprint()\n",
+    "    return primes, next_primes\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# next from min=1million+1 to max\n",
+    "next = 100000\n",
+    "min = 1000001  # must be odd\n",
+    "max = min+next\n",
+    "primes, primes2 = next_series()\n",
+    "\n",
+    "# 34m 33.3s without sqrt(n)\n",
+    "# 17.9s with sqrt(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -147,78 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save once\n",
-    "# with open('primes.pkl', 'wb') as f:\n",
-    "#     pickle.dump(primes, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# reset primes to the first 1 million search\n",
-    "# read from file\n",
-    "with open('primes.pkl', 'rb') as f:\n",
-    "    mynewprimeslist = pickle.load(f)\n",
-    "# reset primes with data read\n",
-    "primes = mynewprimeslist"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def next_series():\n",
-    "    next_primes = []\n",
-    "    for n in range(min,max,2):\n",
-    "        prime=True\n",
-    "        #odds.append(n)\n",
-    "        for k in primes:\n",
-    "            ops+=1\n",
-    "            xprint(n,k,n%k==0,end=\"\")\n",
-    "            if (n%k) == 0:\n",
-    "                prime = False\n",
-    "                xprint()\n",
-    "                xprint(n,\" is not prime!\")\n",
-    "                xprint()\n",
-    "                break\n",
-    "            else:\n",
-    "                xprint()\n",
-    "        # after divisions with all primes or n not prime   \n",
-    "        if prime and n not in primes:\n",
-    "            xprint(n,\" is prime !\")\n",
-    "            primes.append(n)\n",
-    "            next_primes.append(n)\n",
-    "            xprint()\n",
-    "    return primes, next_primes\n",
-    "\n",
-    "# 34m 33.3s"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# next from min=1million+1 to max\n",
-    "next = 100000\n",
-    "min = 1000001  # must be odd\n",
-    "max = min+next\n",
-    "# primes, primes2 = next_series()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +261,7 @@
        "(7216, [1099927, 1099933, 1099957, 1099961, 1099997])"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
