--- a/primes_by_odds.ipynb
+++ b/primes_by_odds.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,16 +102,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(78498, 999983)"
+       "(143865, 4999999)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -159,21 +159,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# reset primes to the first 1 million search\n",
-    "# read from file\n",
-    "with open('primes.pkl', 'rb') as f:\n",
-    "    mynewprimeslist = pickle.load(f)\n",
-    "# reset primes with data read\n",
-    "primes = mynewprimeslist"
+    "import pickle\n",
+    "from numpy import sqrt\n",
+    "ops = 0\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = [\"primes2million.pkl\",\"primes3million.pkl\",\"primes4million.pkl\",\n",
+    "        \"primes5million.pkl\",\"primes6million.pkl\",\"primes7million.pkl\",\n",
+    "        \"primes8million.pkl\", \"primes9million.pkl\",]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# reset primes to the first 1 million search\n",
+    "with open('primes.pkl', 'rb') as f:\n",
+    "    primes = pickle.load(f)\n",
+    "\n",
+    "for file in files:    \n",
+    "    # read from file\n",
+    "    with open(file, 'rb') as f:\n",
+    "        mynewprimeslist = pickle.load(f)\n",
+    "    # reset primes with data read\n",
+    "    primes = primes+mynewprimeslist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(602489, 8999993)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(primes),primes[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,37 +254,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "# next from min=1million+1 to max\n",
-    "next = 100000\n",
-    "min = 1000001  # must be odd\n",
+    "next = 1000000\n",
+    "min = 9000001  # must be odd\n",
     "max = min+next\n",
     "primes, primes2 = next_series()\n",
     "\n",
     "# 34m 33.3s without sqrt(n)\n",
-    "# 17.9s with sqrt(n)"
+    "# 17.9s with sqrt(n) for 100000\n",
+    "# 4mn 44.1s for 2000000\n",
+    "# 9mn 40.9s for 3000000\n",
+    "# 7mn 52.9s for 4000000\n",
+    "# 10mn 8.3s for 5 millions\n",
+    "# 11mn 35.9s 6 millions\n",
+    "# 12mn 51.2s 7 millions\n",
+    "# 13mn 12.8s 8 millions\n",
+    "# 15mn 35.9s 9 millions\n",
+    "# 23mn 49.4s 10 millions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1098541\t1098593\t1098613\t1098623\t1098631\t1098649\t\n",
-      "1098667\t1098673\t1098689\t1098707\t1098709\t1098731\t1098737\t1098787\t1098791\t1098803\t1098821\t1098833\t1098847\t1098953\t1098967\t\n",
-      "1098973\t1098989\t1099031\t1099051\t1099057\t1099079\t1099081\t1099097\t1099103\t1099117\t1099121\t1099139\t1099171\t1099177\t1099181\t\n",
-      "1099199\t1099223\t1099247\t1099249\t1099261\t1099279\t1099289\t1099309\t1099313\t1099327\t1099337\t1099363\t1099369\t1099391\t1099393\t\n",
-      "1099409\t1099411\t1099421\t1099433\t1099459\t1099463\t1099487\t1099489\t1099493\t1099499\t1099507\t1099513\t1099519\t1099523\t1099541\t\n",
-      "1099547\t1099559\t1099573\t1099589\t1099619\t1099621\t1099627\t1099633\t1099649\t1099669\t1099687\t1099711\t1099717\t1099723\t1099727\t\n",
-      "1099729\t1099741\t1099757\t1099771\t1099783\t1099793\t1099799\t1099807\t1099817\t1099823\t1099841\t1099843\t1099859\t1099867\t1099927\t\n",
-      "1099933\t1099957\t1099961\t1099997\t"
+      "9998279\t9998281\t9998309\t9998321\t9998323\t9998333\t\n",
+      "9998377\t9998381\t9998393\t9998413\t9998423\t9998441\t9998447\t9998459\t9998479\t9998539\t9998543\t9998557\t9998561\t9998581\t9998587\t\n",
+      "9998603\t9998623\t9998633\t9998641\t9998689\t9998699\t9998701\t9998719\t9998741\t9998743\t9998749\t9998753\t9998777\t9998797\t9998801\t\n",
+      "9998809\t9998851\t9998861\t9998867\t9998887\t9998893\t9998903\t9998929\t9998969\t9998971\t9998977\t9999047\t9999049\t9999053\t9999071\t\n",
+      "9999083\t9999161\t9999163\t9999167\t9999193\t9999217\t9999221\t9999233\t9999271\t9999277\t9999289\t9999299\t9999317\t9999337\t9999347\t\n",
+      "9999397\t9999401\t9999419\t9999433\t9999463\t9999469\t9999481\t9999511\t9999533\t9999593\t9999601\t9999637\t9999653\t9999659\t9999667\t\n",
+      "9999677\t9999713\t9999739\t9999749\t9999761\t9999823\t9999863\t9999877\t9999883\t9999889\t9999901\t9999907\t9999929\t9999931\t9999937\t\n",
+      "9999943\t9999971\t9999973\t9999991\t"
      ]
     }
    ],
@@ -252,33 +308,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(7216, [1099927, 1099933, 1099957, 1099961, 1099997])"
+       "(62090,\n",
+       " [9000011, 9000041, 9000049, 9000059, 9000067],\n",
+       " [9999937, 9999943, 9999971, 9999973, 9999991])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(primes2), primes2[-5:]"
+    "len(primes2), primes2[:5], primes2[-5:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save primes2\n",
-    "# with open('primes2.pkl', 'wb') as f:\n",
-    "#     pickle.dump(primes2, f)"
+    "#save primes2\n",
+    "with open('primes10million.pkl', 'wb') as f:\n",
+    "     pickle.dump(primes2, f)"
    ]
   }
  ],
