--- a/primes_by_odds.ipynb
+++ b/primes_by_odds.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,6 +53,7 @@
     "    # but not all odd numbers are primes ! ex: 9, 15\n",
     "    # So we divide each odd number by the primes already known and each time we found one, we add it to the list of primes. \n",
     "    for n in range(3,max,2):\n",
+    "        if unit==5 and n!=5:continue\n",
     "        prime=True\n",
     "        #odds.append(n)\n",
     "        for k in primes:\n",
@@ -77,13 +78,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# compute the primes under 1 million\n",
     "\n",
-    "primes = first_primes(max)\n",
+    "primes = first_primes(500000)\n",
     "\n",
     "# it takes 30m 52.3s without sqrt(n)\n",
     "# it takes 1m 45.4s with sqrt(n)"
@@ -102,16 +103,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(143865, 4999999)"
+       "(78498, 999983)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
